# FreeRDPweb

./: .gitignore  CMakeLists.txt
src/: daemon.cpp  daemon.hpp  log.cpp  log.hpp  main.cpp  nt_service.cpp  nt_service.hpp  server.cpp  server.hpp  service.cpp  service.hpp
